--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,16 @@
                         <input type="tel" class="input offer__input" placeholder="Váš telefon">
                         <button class="button offer__button">Získejte bezplatný design-projekt</button>
                     </form>
+                    <div class="offer-wrap">
+                        <div class="offer-wrap__text_left">
+                            <span class="offer-wrap__info">Náš manažer vám zavolá v průběhu 60 sekund</span>
+                        </div>
+                        <div class="offer-wrap__text_right">
+                            <span class="offer-wrap__call">nebo nám zavolejte sami</span>
+                            <a href="tel:+420777167699" class="offer-wrap__phone">+420 777 167 699</a>
+                        </div>
+                    </div>
+                        
                 </div>
             </div>
         </section>
