--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HouseFix</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -85,6 +87,26 @@
             </div>
         </section>
 
+        <section class="portfolio">
+            <div class="container">
+                <h2 class="section-title portfolio__title"> Za dobu práce od roku 2007, <br> jsme realizovali více než 500 oprav bytů a domů</h2>
+
+                <div class="slider">
+                    <div class="slider__item"><img class="slider__image" src="img/portfolio1.jpg" alt="Obývací pokoj s židlemi"></div>
+                    <div class="slider__item"><img class="slider__image" src="img/portfolio2.jpg" alt="Obývací pokoj s gaučem"></div>
+                    <div class="slider__item"><img class="slider__image" src="img/portfolio3.jpg" alt="Ložnice"></div>
+                    <div class="slider__item"><img class="slider__image" src="img/portfolio1.jpg" alt="Obývací pokoj s židlemi"></div>
+                    <div class="slider__item"><img class="slider__image" src="img/portfolio2.jpg" alt="Obývací pokoj s gaučem"></div>
+                    <div class="slider__item"><img class="slider__image" src="img/portfolio3.jpg" alt="Ložnice"></div>
+                </div>
+
+                <div class="arrows portfolio__arrows">
+                    <div class="arrows__left"><img src="img/arrow-left.png" alt="šipka doleva"></div>
+                    <div class="arrows__right"><img src="img/arrow-right.png" alt="šipka doprava"></div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <div class="modal" id="modal">
@@ -95,6 +117,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/slick.js"></script>
     <script src="js/main.js"></script>
 
 </body>
