--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,69 @@
             </div>
         </section>
 
+        <section class="price">
+            <div class="container">
+                <h2 class="section-title price__title">Máme velmi flexibilní systém slev <br> pro komplexní práce!</h2>
+                <span class="section-subtitle price__subtitle">Ceny za naše služby</span>
+                <div class="cards">
+                    <div class="card price__card">
+                        <div class="card__img">
+                            <img src="img/koupelna.jpg" alt="koupelna">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">Rekonstrukce koupelen a toalet</h4>
+                            <a href="#" class="card__link">Zjistit ceny</a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__img">
+                            <img src="img/pokoj.jpg" alt="pokoj">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">Rekonstrukce pokojů a apartmánů</h4>
+                            <a href="#" class="card__link">Zjistit ceny</a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__img">
+                            <img src="img/kancelar.jpg" alt="kancelar">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">Výzdoba kancelářských prostorů</h4>
+                            <a href="#" class="card__link">Zjistit ceny</a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__img">
+                            <img src="img/rekonstrukce.jpg" alt="rekonstrukce">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">Rekonstrukce v nových budovách</h4>
+                            <a href="#" class="card__link">Zjistit ceny</a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__img">
+                            <img src="img/kuchyne.jpg" alt="kuchyne">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">Renovace kuchyní</h4>
+                            <a href="#" class="card__link">Zjistit ceny</a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__img">
+                            <img src="img/chata.jpg" alt="chata">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">Opravy chat a chalup</h4>
+                            <a href="#" class="card__link">Zjistit ceny</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <div class="modal" id="modal">
