--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,51 @@
             </div>
         </section>
 
+        <section class="steps">
+            <div class="container">
+                <h2 class="section-title steps__title">Naši experti jsou připraveni k změření <br> kdykoli se Vám to hodí</h2>
+                <span class="section-subtitle steps__subtitle">5 kroků k renovaci</span>
+                <div class="icons">
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/hlava.png" alt="hlava se sluchátky">
+                        </div>
+                            <span class="icon__text">Voláte nám nebo zanecháváte požadavek</span>
+                    </div>
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/hodiny.png" alt="hodiny">
+                        </div>
+                            <span class="icon__text">Dohodneme se na čase pro změření vašeho objektu</span>
+                    </div>
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/penize.png" alt="peníze">
+                        </div>
+                        <span class="icon__text">Vypočítáme rozpočet a schválíme ho s vámi</span>
+                    </div>
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/dokument.png" alt="dokument">
+                        </div>
+                            <span class="icon__text">Vypočítáme rozpočet a schválíme ho s vámi</span>
+                    </div>
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/kalendar.png" alt="kalendář">
+                        </div>
+                            <span class="icon__text">Provádíme opravy v uvedeném termínu</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="notice">
+            <div class="container">
+                <h2 class="notice__text">Oprava Vás bude stát levněji, protože používáme kvalitní materiály za velkoobchodní ceny</h2>
+            </div>
+        </section>
+
     </main>
 
     <div class="modal" id="modal">
