--- a/src/index.html
+++ b/src/index.html
@@ -216,6 +216,93 @@
             </div>
         </section>
 
+        <section class="info">
+            <div class="container">
+                <div class="benefits info__block">
+                    <div class="benefit">
+                        <span class="benefit__text">Pomůžeme vám zakoupit veškeré materiály za velkoobchodní ceny u pro prověřených dodavatelů</span>
+                        <img class="benefit__image" src="img/benefit1.png" alt="benefit 1">
+                    </div>
+                    <div class="benefit">
+                        <span class="benefit__text">Uděláme Vám <strong>maximální slevu</strong> u našich partnerů na nákup materiálů</span>
+                        <img class="benefit__image" src="img/benefit2.png" alt="benefit 2">
+                    </div>
+                    <div class="benefit">
+                        <span class="benefit__text">Vše, co nedokážete najít v obchodech - pomůžeme objednat <strong>u prověřených dodavatelů</strong></span>
+                        <img class="benefit__image" src="img/benefit3.png" alt="benefit 3">
+                    </div>
+                </div>
+
+                <div class="documents">
+                    <h2 class="section-title documents__title">Všechny naše povinnosti jsou <br> detailně propsané ve smlouvě</h2>
+                </div>
+                <div class="documents-block">
+                    <div class="documents-block__item">
+                        <div class="documents-block__image">
+                            <img src="img/doc1.png" alt="Dokument 1">
+                        </div>
+                        <div class="documents-block__text">
+                            Záruka kvality <br> provedené práce
+                        </div>
+                    </div>
+                    <div class="documents-block__item">
+                        <div class="documents-block__image">
+                            <img src="img/doc2.png" alt="Dokument 2">
+                        </div>
+                        <div class="documents-block__text">
+                            Záruka na fixované ceny <br> Druhy práce a jejich ceny <br> jsou propsané ve smlouvě
+                        </div>
+                    </div>
+                    <div class="documents-block__item">
+                        <div class="documents-block__image">
+                            <img src="img/doc3.png" alt="Dokument 3">
+                        </div>
+                        <div class="documents-block__text">
+                            Garance na přesné dodržení <br> termínů a zodpovědnosti <br> za nesplnění
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="brief">
+            <div class="container">
+                <div class="brief-block">
+                    <div class="interview brief__interview">
+                        <h3 class="interview__title">Můžeme Vám sdělit přibližnou cenu práce a materiálů po telefonu</h3>
+                        <span class="interview__subtitle">K tomu musíte odpovědět na 4 otázky:</span>
+                        <ul class="interview-list">
+                            <li class="interview-list__item">
+                                <span class="interview-list__counter">1.</span>
+                                <span class="interview-list__text">Jaká je plocha místnosti?</span>
+                            </li>
+                            <li class="interview-list__item">
+                                <span class="interview-list__counter">2.</span>
+                                <span class="interview-list__text">Máte novou budovu nebo starší bydlení?</span>
+                            </li>
+                            <li class="interview-list__item">
+                                <span class="interview-list__counter">3.</span>
+                                <span class="interview-list__text">Kde se nachazí místnost, ve které budou probíhat opravy?</span>
+                            </li>
+                            <li class="interview-list__item">
+                                <span class="interview-list__counter">4.</span>
+                                <span class="interview-list__text">Účel místnosti?</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div action="" class="form brief__form">
+                        <h3 class="form__title">Zanechte poptávku na bezplatný výpočet renovace po telefonu</h3>
+                        <span class="form__subtitle">Vyplňte níže uvedený formulář</span>
+                        <form action="#" class="form">
+                            <input type="text" class="input brief__input" placeholder="Vaše jméno">
+                            <input type="text" class="input brief__input" placeholder="Váš telefon">
+                            <button class="button brief__button">Vypočítat náklady</button>
+                            <span class="form__description"> Zavoláme vám nazpět do 60 sekund</span>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <div class="modal" id="modal">
