Přidání validace formuláře

--- a/src/index.html
+++ b/src/index.html
@@ -289,12 +289,12 @@
                             </li>
                         </ul>
                     </div>
-                    <div action="" class="form brief__form">
+                    <div class="form brief__form">
                         <h3 class="form__title">Zanechte poptávku na bezplatný výpočet renovace po telefonu</h3>
                         <span class="form__subtitle">Vyplňte níže uvedený formulář</span>
-                        <form action="#" class="form">
-                            <input type="text" class="input brief__input" placeholder="Vaše jméno">
-                            <input type="text" class="input brief__input" placeholder="Váš telefon">
+                        <form action="#" class="form" id="brief-form">
+                            <input type="text" name="username" class="input brief__input" placeholder="Vaše jméno">
+                            <input type="text" name="phone" class="input brief__input" placeholder="Váš telefon">
                             <button class="button brief__button">Vypočítat náklady</button>
                             <span class="form__description"> Zavoláme vám nazpět do 60 sekund</span>
                         </form>
@@ -315,6 +315,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
